fixed crash on Linux
– fixed wrongly coloured scrollbar background on windows

--- a/src/projekt_anki_notetypes/note_types/ProjektAnkiClozePhil/Styling.css
+++ b/src/projekt_anki_notetypes/note_types/ProjektAnkiClozePhil/Styling.css
@@ -63,6 +63,14 @@
   --button-alignment: center;
 }
 
+root {
+  --canvas: var(--bg);
+}
+
+:root[class*=night-mode] {
+  --canvas: var(--nm-bg);
+}
+
 /*############ DO NOT DELETE #############*/
 /*~~~~~~~~~CUSTOM COLOR INSERTION~~~~~~~~~*/
 
